<resources>
    <string name="app_name">Calc</string>
    <string name="zero">0</string>
    <string name="ac">AC</string>
    <string name="del"><![CDATA[<-]]></string>
    <string name="percent">%</string>
    <string name="division">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">*</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="dot">.</string>
    <string name="result">=</string>
    <string name="dots">…</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="do_you_want_a_little_computation">Do you want a little computation?</string>
</resources>