<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_calc">


    <TextView
        android:id="@+id/tvTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_height"
        android:gravity="end"
        android:paddingStart="@dimen/tv_padding"
        android:paddingEnd="@dimen/tv_padding"
        android:scrollbars="vertical"
        android:text="@string/dots"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_textSize"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBot"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_height"
        android:gravity="end"
        android:paddingStart="@dimen/tv_padding"
        android:paddingEnd="@dimen/tv_padding"
        android:scrollbars="vertical"
        android:text="@string/zero"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_textSize"
        app:layout_constraintTop_toBottomOf="@id/tvTop" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn1"
        style="@style/MyStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/btn_margin"
        android:layout_marginTop="@dimen/btn_margin"
        android:text="@string/one"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintBottom_toTopOf="@+id/btn0"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn2"
        style="@style/MyStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/btn_margin"
        android:text="@string/two"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toTopOf="@+id/btn1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn3"
        style="@style/MyStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/btn_margin"
        android:text="@string/three"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toStartOf="@+id/btnPlus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toTopOf="@+id/btn2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn4"
        style="@style/MyStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/btn_margin"
        android:layout_marginTop="@dimen/btn_margin"
        android:text="@string/four"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn5"
        style="@style/MyStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/btn_margin"
        android:text="@string/five"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toTopOf="@+id/btn4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn6"
        style="@style/MyStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/btn_margin"
        android:text="@string/six"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toStartOf="@+id/btnMinus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toTopOf="@+id/btn5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn7"
        style="@style/MyStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/btn_margin"
        android:layout_marginTop="@dimen/btn_margin"
        android:text="@string/seven"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn8"
        style="@style/MyStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/btn_margin"
        android:text="@string/eight"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toTopOf="@+id/btn7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn9"
        style="@style/MyStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/btn_margin"
        android:text="@string/nine"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toStartOf="@+id/btnMultiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toTopOf="@+id/btn8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn0"
        style="@style/MyStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/btn_margin"
        android:text="@string/zero"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPlus"
        style="@style/MyStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/btn_margin"
        android:text="@string/plus"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toTopOf="@+id/btn3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMinus"
        style="@style/MyStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/btn_margin"
        android:text="@string/minus"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintTop_toTopOf="@+id/btn6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMultiply"
        style="@style/MyStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/btn_margin"
        android:text="@string/multiply"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toTopOf="@+id/btn9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDivision"
        style="@style/MyStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/btn_margin"
        android:text="@string/division"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPercent"
        app:layout_constraintTop_toTopOf="@+id/btnPercent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnResult"
        style="@style/MyStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/btn_margin"
        android:text="@string/result"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toEndOf="@+id/btnPlus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/btnDot"
        app:layout_constraintTop_toTopOf="@+id/btnDot" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDot"
        style="@style/MyStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="10dp"
        android:text="@string/dot"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toStartOf="@+id/btnResult"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toTopOf="@+id/btn0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClear"
        style="@style/MyStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/btn_margin"
        android:text="@string/ac"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintBottom_toTopOf="@+id/btn7"
        app:layout_constraintEnd_toStartOf="@+id/btnDel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBot"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDel"
        style="@style/MyStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/btn_margin"
        android:text="@string/del"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toStartOf="@+id/btnPercent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnClear"
        app:layout_constraintTop_toTopOf="@+id/btnClear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPercent"
        style="@style/MyStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/btn_margin"
        android:text="@string/percent"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toStartOf="@+id/btnDivision"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDel"
        app:layout_constraintTop_toTopOf="@+id/btnDel" />

</androidx.constraintlayout.widget.ConstraintLayout>